--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -123,7 +123,8 @@
     
     "GLOBAL_COMPONENT":{
         "FAILURE_WIDGET_EXPLANATION_TEXT":"Oops, something went wrong, but be calm - let's give it another shot.",
-        "FAILURE_WIDGET_BUTTON_TEXT":"Try Again"
+        "FAILURE_WIDGET_BUTTON_TEXT":"Try Again",
+        "SELECTION_PAGE_TEXTFIELD_CANCEL_TEXT":"Cancel"
     },
 
     "MARKET_FEATURE":{
