--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -62,7 +62,7 @@
     },
     
     "DETAIL_SCREEN":{
-        "VIEWMODEL_SHARE_TEXT":"Hey, Coin Dino uygulamasından {} isimli coine göz at! [LINK]",
+        "VIEWMODEL_SHARE_TEXT":"Hey, Coin Dino uygulamasından {} isimli coine göz at! https://apps.apple.com/us/app/coin-dino-crypto-tracker/id1581811548",
         "INFORMATION_ROW_MARKET_CAP_RANK_TEXT":"PİYASA DEĞERİ SIRALAMASI",
         "INFORMATION_ROW_MARKET_CAP_TEXT":"PİYASA DEĞERİ",
         "INFORMATION_ROW_TRADING_VOLUME_TEXT":"İŞLEM HACMİ",
@@ -144,7 +144,7 @@
     },
 
     "MINI_SERVICE":{
-        "SHARE_MAIN_TEXT":"Hey, Coin Dino adında bir kripto para uygulaması buldum ve çok sevdim. Şuradan göz at! [LINK]",
+        "SHARE_MAIN_TEXT":"Hey, Coin Dino adında bir kripto para uygulaması buldum ve çok sevdim. Şuradan göz at! https://apps.apple.com/us/app/coin-dino-crypto-tracker/id1581811548",
         "SHARE_SUBJECT_TEXT":"Coin Dino",
         "URL_LAUNCHER_SEND_CONTANT_MAIL_SUBJECT_TEXT":"Geri Bildirim",
         "URL_LAUNCHER_SEND_CONTANT_MAIL_BODY_TEXT":"Merhaba, Coin Dino için bir geri bildirimim var."
